--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - run:
           name: Lint, Build, and Test
           command: |
-            yarn Lint
+            yarn lint
             yarn build
             yarn test --ci
       - run:
