--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
   "scripts": {
     "build": "tsc",
     "format": "prettier --write --ignore-unknown .",
+    "generate": "graphql-codegen",
     "lint": "eslint 'src/**/*.ts' 'test/**/*.ts' jest.config.ts",
     "prepare": "husky install",
     "test": "jest"
   },
   "dependencies": {
-    "superagent": "^8.0.6"
+    "@apollo/client": "^3.7.2",
+    "graphql": "^16.6.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.16.1",
+    "@graphql-codegen/client-preset": "^1.2.3",
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.11",
-    "@types/superagent": "^4.1.16",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
     "eslint": "^8.29.0",
@@ -28,6 +31,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "graphql-tools": "^8.3.14",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "jest-junit": "^15.0.0",
