--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "graphql": "^16.6.0"
   },
   "devDependencies": {
+    "@apollo/server": "^4.3.0",
+    "@faker-js/faker": "^7.6.0",
     "@graphql-codegen/cli": "^2.16.1",
     "@graphql-codegen/client-preset": "^1.2.3",
+    "@graphql-codegen/typescript-resolvers": "^2.7.10",
+    "@graphql-tools/mock": "^8.7.14",
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.11",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
@@ -31,7 +35,6 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
-    "graphql-tools": "^8.3.14",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "jest-junit": "^15.0.0",
