--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "graphql": "^16.6.0"
   },
   "devDependencies": {
-    "@apollo/server": "^4.3.0",
     "@faker-js/faker": "^7.6.0",
     "@graphql-codegen/cli": "^2.16.1",
     "@graphql-codegen/client-preset": "^1.2.3",
@@ -35,6 +34,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "graphql-yoga": "^3.1.1",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "jest-junit": "^15.0.0",
